--- a/index.html
+++ b/index.html
@@ -25,13 +25,12 @@
 	<meta name="MobileOptimized" content="320">
 	<meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7; IE=EDGE" />
 	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="https://jarvisbz.github.io/css/stylesheet.css">
-	<link rel="stylesheet" type="text/css" href="https://jarvisbz.github.io/css/loading.css">
-	<link href='https://jarvisbz.github.io/css/Signika.css' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+	<link rel="stylesheet" type="text/css" href="css/loading.css">
+	<link href='css/Signika.css' rel='stylesheet' type='text/css'>
 	<!-- <link href='http://fonts.googleapis.com/css?family=Nunito' r
 		el='stylesheet' type='text/css'> -->
-	<link rel="stylesheet" type="text/css" href="https://jarvisbz.github.io/css/cake.css">
-	<script src="https://jarvisbz.github.io/js/muisc_play.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/cake.css">
 
 	<!-- <link rel="stylesheet/less" href="cake.less">
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/less.js/2.1.0/less.js"></script> -->
@@ -157,7 +156,7 @@
 	<div class="loading"></div>
 	  <div class="music music-ani" id="music_black"></div>
 	<audio class="song" controls loop>
-        <source src="https://jarvisbz.github.io/hbd.mp3"></source>
+        <source src="hbd.mp3"></source>
 	   Your browser isn't invited for super fun audio time.
     </audio>
     <div class="balloons text-center" id="b1">
@@ -344,17 +343,17 @@
 
 	</div>
 </body>
-
-<script src="https://jarvisbz.github.io/js/jquery.min.js"></script>
-<script src="https://jarvisbz.github.io/js/content_zoom.js"></script>
-<script src="https://jarvisbz.github.io/s/bootstrap.min.js"></script>
-<script src="https://jarvisbz.github.io/js/effect.js"></script>
+<script src="js/muisc_play.js"></script>
+<script src="js/jquery.min.js"></script>
+<script src="js/content_zoom.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/effect.js"></script>
 
  <!--end-->
 
   <!--music文件放尾部，负责播放有影响-->
 
-
+  <script src="https://topmdrt-static.oss-cn-shenzhen.aliyuncs.com/static/js/common/music.js"></script>
 
   <!--苹果系统播放兼容问题需要引入-->
 
@@ -374,6 +373,5 @@
 	});
 
 </script>
-  <script src="https://topmdrt-static.oss-cn-shenzhen.aliyuncs.com/static/js/common/music.js"></script>
 
 </html>
