--- a/index.html
+++ b/index.html
@@ -28,14 +28,11 @@
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 	<link rel="stylesheet" type="text/css" href="css/loading.css">
 	<link href='css/Signika.css' rel='stylesheet' type='text/css'>
-	<!-- <link href='http://fonts.googleapis.com/css?family=Nunito' r
-		el='stylesheet' type='text/css'> -->
+	<!-- <link href='http://fonts.googleapis.com/css?family=Nunito' rel='stylesheet' type='text/css'> -->
 	<link rel="stylesheet" type="text/css" href="css/cake.css">
-
 	<!-- <link rel="stylesheet/less" href="cake.less">
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/less.js/2.1.0/less.js"></script> -->
 	<style type="text/css">
-
 /*自适应圆角投影*/
 .round_shade_box{width:1px; height:1px; font-size:0; display:none; _background:white; _border:1px solid #cccccc;}
 .round_shade_top{margin:0 12px 0 10px; background:url(image/zxx_round_shade.png) repeat-x -20px -40px; _background:white; zoom:1;}
@@ -58,8 +55,7 @@
 .zxx_zoom_right{width:50%; float:left; margin-top:20px; padding-left:2%;}
 .zxx_zoom_right h4{margin:5px 0px; font-size:1.1em;}
 .zxx_zoom_right p.zxx_zoom_word{line-height:1.5; font-size:1.05em; letter-spacing:1px; margin:0 0 35px; padding-top:5px;}
-  
-   .music:active {
+.music:active {
 
     text-decoration: none;
 
@@ -190,7 +186,7 @@
 	<div class="container">
 		
 		<div class="row">
-			<div class="col-md-2 col-xs-play2 bulb-holder">
+			<div class="col-md-2 col-xs-2 bulb-holder">
 				<div class="bulb" id="bulb_yellow"></div>
 			</div>
 			<div class="col-md-2 col-xs-2 bulb-holder">
@@ -242,31 +238,30 @@
 		<center id="cen1">
 			<div id="pho1" style="display: inline-block;">
 				<div class="photo sample4" style="display: none;" id="pic11">
-					<a href="#pic1"><span>哈哈~
-					给你个小惊吓~点击可以放大~</span><img src="pic/pic1.jpg" alt="image" class="picbox"></a>
+					<a href="#pic1"><span>哈哈感觉年年更合适~</span><img src="pic/pic1.jpg" alt="image" class="picbox"></a>
 				</div>
 				<div class="photo sample4" style="display: none;" id="pic12">
 					<a href="#pic2"><span>生日快乐~</span><img src="pic/pic2.jpg" alt="image" class="picbox"></a>
 				</div>
 				<div class="photo sample4" style="display: none;" id="pic13">
-					<a href="#pic3"><span>或许你看不到这封email</span><img src="pic/pic3.jpg" alt="image" class="picbox"></a>
+					<a href="#pic3"><span>哈~总感觉做错啥事了~</span><img src="pic/pic3.jpg" alt="image" class="picbox"></a>
 				</div>
 				<div class="photo sample4" style="display: none;" id="pic14">
-					<a href="#pic4"><span>不过~哈哈不重要，看到的话希望喜欢~</span><img src="pic/pic4.jpg" alt="image" class="picbox"></a>
+					<a href="#pic4"><span>期待你的影展VLOG~</span><img src="pic/pic4.jpg" alt="image" class="picbox"></a>
 				</div>
 			</div>
 			<div id="pho2" style="margin-top: 15px; display: inline-block;">
 				<div class="photo sample4" style="display: none;" id="pic15">
-					<a href="#pic5"><span>emmm~不知道哪里错了哈哈</span><img src="pic/pic5.jpg" alt="image" class="picbox"></a>
+					<a href="#pic5"><span>Cheers！~~</span><img src="pic/pic5.jpg" alt="image" class="picbox"></a>
 				</div>
 				<div class="photo sample4" style="display: none;" id="pic16">
-					<a href="#pic6"><span>没关系~开开心心的</span><img src="pic/pic6.jpg" alt="image" class="picbox"></a>
+					<a href="#pic6"><span>其实我觉得~</span><img src="pic/pic6.jpg" alt="image" class="picbox"></a>
 				</div>
 				<div class="photo sample4" style="display: none;" id="pic17">
-					<a href="#pic7"><span>哈哈没有太多你相关的图</span><img src="pic/pic7.jpg" alt="image" class="picbox"></a>
+					<a href="#pic7"><span>但有一个可以想念的人</span><img src="pic/pic7.jpg" alt="image" class="picbox"></a>
 				</div>
 				<div class="photo sample4" style="display: none;" id="pic18">
-					<a href="#pic8"><span>就拿年年的凑凑吧~</span><img src="pic/pic8.jpg" alt="image" class="picbox"></a>
+					<a href="#pic8"><span>本身就是一门艺术~~~</span><img src="pic/pic8.jpg" alt="image" class="picbox"></a>
 				</div>
 			</div>
 		</center>
@@ -324,7 +319,7 @@
 					<button class="btn btn-primary" id="cake_fadein">再加上~最好看的蛋糕</button>
 					<button class="btn btn-primary" id="light_candle">你来点燃蜡烛吧~许个愿小姑娘~</button>
 					<button class="btn btn-primary" id="wish_message">Happy Birthday</button>
-					<button class="btn btn-primary" id="story">给你个小惊吓~~</button>
+					<button class="btn btn-primary" id="story">收好贺卡~</button>
 					<!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
 				</div>
 			</div>
@@ -343,21 +338,18 @@
 
 	</div>
 </body>
-<script src="js/muisc_play.js"></script>
 <script src="js/jquery.min.js"></script>
 <script src="js/content_zoom.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/effect.js"></script>
-
- <!--end-->
-
   <!--music文件放尾部，负责播放有影响-->
 
-  <script src="https://topmdrt-static.oss-cn-shenzhen.aliyuncs.com/static/js/common/music.js"></script>
+  <script src="js/music.js"></script>
 
   <!--苹果系统播放兼容问题需要引入-->
 
   <script src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -373,5 +365,4 @@
 	});
 
 </script>
-
 </html>
