--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 					<a href="#pic2"><span>生日快乐~</span><img src="pic/pic2.jpg" alt="image" class="picbox"></a>
 				</div>
 				<div class="photo sample4" style="display: none;" id="pic13">
-					<a href="#pic3"><span>哈~总感觉做错啥事了~</span><img src="pic/pic3.jpg" alt="image" class="picbox"></a>
+					<a href="#pic3"><span>哈~总感觉哪儿不对劲~</span><img src="pic/pic3.jpg" alt="image" class="picbox"></a>
 				</div>
 				<div class="photo sample4" style="display: none;" id="pic14">
 					<a href="#pic4"><span>期待你的影展VLOG~</span><img src="pic/pic4.jpg" alt="image" class="picbox"></a>
@@ -258,10 +258,10 @@
 					<a href="#pic6"><span>其实我觉得~</span><img src="pic/pic6.jpg" alt="image" class="picbox"></a>
 				</div>
 				<div class="photo sample4" style="display: none;" id="pic17">
-					<a href="#pic7"><span>但有一个可以想念的人</span><img src="pic/pic7.jpg" alt="image" class="picbox"></a>
+					<a href="#pic7"><span>想写18的~~感觉</span><img src="pic/pic7.jpg" alt="image" class="picbox"></a>
 				</div>
 				<div class="photo sample4" style="display: none;" id="pic18">
-					<a href="#pic8"><span>本身就是一门艺术~~~</span><img src="pic/pic8.jpg" alt="image" class="picbox"></a>
+					<a href="#pic8"><span>这本身就是一门艺术~~~</span><img src="pic/pic8.jpg" alt="image" class="picbox"></a>
 				</div>
 			</div>
 		</center>
