--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 					<a href="#pic6"><span>其实我觉得~</span><img src="pic/pic6.jpg" alt="image" class="picbox"></a>
 				</div>
 				<div class="photo sample4" style="display: none;" id="pic17">
-					<a href="#pic7"><span>想写18的~~感觉</span><img src="pic/pic7.jpg" alt="image" class="picbox"></a>
+					<a href="#pic7"><span>想写18的哈哈~~感觉</span><img src="pic/pic7.jpg" alt="image" class="picbox"></a>
 				</div>
 				<div class="photo sample4" style="display: none;" id="pic18">
 					<a href="#pic8"><span>这本身就是一门艺术~~~</span><img src="pic/pic8.jpg" alt="image" class="picbox"></a>
@@ -317,7 +317,7 @@
 					<button class="btn btn-primary" id="bannar_coming">让我为你挂上彩带~</button>
 					<button class="btn btn-primary" id="balloons_flying">释放漂亮的气球</button>
 					<button class="btn btn-primary" id="cake_fadein">再加上~最好看的蛋糕</button>
-					<button class="btn btn-primary" id="light_candle">你来点燃蜡烛吧~许个愿小姑娘~</button>
+					<button class="btn btn-primary" id="light_candle">你来点燃蜡烛吧~许个愿姑娘~</button>
 					<button class="btn btn-primary" id="wish_message">Happy Birthday</button>
 					<button class="btn btn-primary" id="story">收好贺卡~</button>
 					<!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
